--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   width: 250px;
   height: 100%;
   background-color: #333;
+  background-image: url('butt1.png');
+  background-size: cover;
   color: white;
   padding: 20px;
   transition: left 0.3s ease;
