--- a/style.css
+++ b/style.css
@@ -13,6 +13,19 @@ h1 {
   color: white;
 }
 
+.wordoption{
+  display: flex;
+  flex-direction: column; /* label과 select를 세로 배치 */
+  align-items: center;     /* 가로 가운데 */
+  margin-top: 5%;
+}
+
+select {
+  padding: 10px;
+  font-size: 16px;
+  width: 200px;
+}
+
 .open-btn {
   margin: 20px;
   padding: 10px 20px;
