--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ h1 {
   color: white;
 }
 
+.selectAllbtn {
+  color: black;
+  background-image: url("pic/butt1.png");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 10px center;
+}
+
+.deselectAllBtn{
+  color: black;
+}
+
 .wordoption{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -42,6 +54,14 @@ select {
   margin: 20px;
   padding: 10px 20px;
   font-size: 16px;
+  width: 40px;
+  height: 40px;
+  background-image: url("pic/butt1-noogi.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -63,9 +83,13 @@ select {
 }
 
 .close-btn {
-  background: red;
-  color: white;
+   width: 40px;
+  height: 40px;
+  background-image: url("pic/butt1-noogi.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   border: none;
-  padding: 10px;
+  background-color: transparent;
   cursor: pointer;
 }
