--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ h1 {
   color: white;
 }
 
+h3 {
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 8%;
+  font-size: 200%;
+  color: white;
+}
+
 .selectAllbtn {
   color: black;
 }
