--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ h1 {
 }
 
 h3 {
-  margin: 5% 0 18%;
+  margin: 5% 0 1%;
   font-size: 3vw;
 }
 
 h5 {
-  margin-top: 20%;
+  margin-top: 8%;
 }
 
 .mainbtn {
@@ -141,5 +141,8 @@ select {
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  margin: 0.5em 0; 
+}
+
+.progress{
+  color: #66cc33;
 }
