txt파일 생성성

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 * {
   font-family: 'NEXON Lv2 Gothic', sans-serif;
-  font-weight: bold; /* 확인 필요 */
+  font-weight: bold;
   box-sizing: border-box;
 }
 
