--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영어 수행 만점 가자</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/responsive.css">
 </head>
 
 <body>
@@ -59,6 +59,6 @@
     </div>
 
 <h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤 / 오류문의 : 인스타 an0_9jb(오류난 화면을 찍어서 보내주세요)</h5>
-<script src="script.js"></script>
+<script src="../static/javascript/script.js"></script>
 </body>
 </html>
