--- a/templates/result.html
+++ b/templates/result.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>검색 결과</title>
-  <link rel="stylesheet" href="resultstyle.css">
-  <link rel="stylesheet" href="resultresponsive.css">
+  <link rel="stylesheet" href="../resultstyle.css">
+  <link rel="stylesheet" href="../resultresponsive.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <button class="goHome" onclick="goHome()">🏠 홈으로 돌아가기</button>
   </div>
 
-  <script src="script3.js"></script>
+  <script src="../script3.js"></script>
 
 </body>
 </html>
