--- a/templates/example.html
+++ b/templates/example.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영어 수행 만점 가자</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../responsive.css">
 </head>
 
 <body> 
@@ -43,7 +43,7 @@
         <div id="feedback" style="margin-top: 10px; font-weight: bold;"></div>
     </div>
     
-    <script src="script.js"></script>
-    <script src="script2.js"></script>
+    <script src="../script.js"></script>
+    <script src="../script2.js"></script>
 </body>
 </html>
