--- a/templates/login.html
+++ b/templates/login.html
@@ -21,9 +21,12 @@
                 <h2>Login</h2>
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <button type="submit">Login</button>
+                <button type="submit">Login</button> 
             </div>
         </form>
+        <form action="{{ url_for('signup_page') }}">
+                    <button type="submit" style="background-color:white;">Signup</button>
+                </form>
     </div>
 
     <h5 style="color: #555555;">
