--- a/templates/wb.html
+++ b/templates/wb.html
@@ -6,7 +6,7 @@
     <title>세미콜론 단어장</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png">
-    <link rel="stylesheet" href="wb.css">
+    <link rel="stylesheet" href="../static/css/wb.css">
 </head>
 <body>
     <div>
