--- a/templates/wb.html
+++ b/templates/wb.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세미콜론 단어장</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="../favicon.png">
     <link rel="stylesheet" href="../static/css/wb.css">
 </head>
 <body>
@@ -24,7 +24,29 @@
                 <div id="dayselectheader">DAY 선택</div>
             </div>
             <div class="dayselect">
-                
+                <div class="dayline1">
+                    <div id="day17">17</div>
+                    <div id="day18">18</div>
+                    <div id="day19">19</div>
+                    <div id="day20">20</div>
+                </div>
+                <div class="dayline2">
+                    <div id="day21">21</div>
+                    <div id="day22">22</div>
+                    <div id="day23">23</div>
+                    <div id="day24">24</div>
+                </div>
+                <div class="dayline3">
+                    <div id="day25">25</div>
+                    <div id="day26">26</div>
+                    <div id="day27">27</div>
+                    <div id="day28">28</div>
+                </div>
+                <div class="dayline4">
+                    <div id="day29">29</div>
+                    <div id="day30">30</div>
+                    <div id="starred">★</div>
+                </div>
             </div>
         </div>
     </div>
