--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,10 @@
                 <button class="Review">오답복습(미완)</button>
                 <button class="Favorites">즐겨찾기된 단어(미완)</button>
                 <button class="Statistics">통계(미완)</button>
+                <form action="{{ url_for('logout') }}">
+                    <button class="Logout">로그아웃</button>
+                </form>
+                
             </div>
    </div> 
 
