wb 기능추가함

--- a/templates/wb.html
+++ b/templates/wb.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../static/css/wb.css">
 </head>
 <body>
+    <!-- sidebar -->
     <div>
         <input type="checkbox" id="menuicon">
         <label for="menuicon">
@@ -50,5 +51,29 @@
             </div>
         </div>
     </div>
+    <!-- Main Screen -->
+    <template class="wordblock">
+        <div class="wordcontainer">
+            <header>
+                <div class="word">semicolon</div>
+                <div class="wordnum">1234</div>
+            </header>
+            <div class="examplecontainer">
+
+            </div>
+
+            <template class="exampleblock">
+                <div class="meaning">운정고 코딩동아리</div>
+                <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
+                <div class="ksentence">세미콜론은 최고다.</div>
+            </template>
+        </div>
+    </template>
+    <template class="unselected">
+        <div id="plzselect">
+            DAY가 선택되지 않았습니다
+        </div>
+    </template>
+    <script src="../static/javascript/wb.js"></script>
 </body>
 </html>
