개힘든 단어장 js기느ㅇ추가

--- a/templates/wb.html
+++ b/templates/wb.html
@@ -46,13 +46,14 @@
                 <div class="dayline4">
                     <div id="day29">29</div>
                     <div id="day30">30</div>
-                    <div id="starred">★</div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Main Screen -->
-    <template class="wordblock">
+    <div class="mainstream">
+
+    <template id="wordblock">
         <div class="wordcontainer">
             <header>
                 <div class="word">semicolon</div>
@@ -61,19 +62,22 @@
             <div class="examplecontainer">
 
             </div>
-
-            <template class="exampleblock">
-                <div class="meaning">운정고 코딩동아리</div>
-                <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
-                <div class="ksentence">세미콜론은 최고다.</div>
-            </template>
         </div>
     </template>
-    <template class="unselected">
+    <template id="exampleblock">
+        <div class="exs">
+            <div class="meaning">운정고 코딩동아리</div>
+            <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
+            <div class="ksentence">세미콜론은 최고다.</div>
+        </div>
+    </template>
+    <template id="unselected">
         <div id="plzselect">
             DAY가 선택되지 않았습니다
         </div>
     </template>
+
+    </div>
     <script src="../static/javascript/wb.js"></script>
 </body>
 </html>
