--- a/static/css/wb.css
+++ b/static/css/wb.css
@@ -137,3 +137,93 @@ input[id="menuicon"]:checked + label + div {
     background-color: #5f5f5f;
     font-size: 1.45rem;
 }
+
+/* Main Screen */
+.wordcontainer {
+    background-color: #474747;
+    border-radius: 12px;
+    width: 70%;
+    max-width: 800px;
+    margin: 60px auto;
+    padding: 20px 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.wordcontainer header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #474747;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.word {
+    font-size: 26px;
+    color: #35b3f2;
+    font-weight: 700;
+}
+
+.wordnum {
+    background-color: #35b3f2;
+    color: white;
+    border-radius: 50px;
+    padding: 4px 12px;
+    font-weight: 700;
+}
+
+/* Example */
+.examplecontainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+}
+
+.exampleblock {
+  padding: 14px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+.meaning {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  font-size: 17px;
+  margin-bottom: 6px;
+}
+
+.esentence span {
+    color: #35b3f2;
+    font-weight: bold;
+}
+
+.esentence, .ksentence {
+    color: #ccc;
+    font-size: 15px;
+    margin: 3px 0;
+}
+
+/* Star Shape */
+.star {
+  top: 8px;
+  right: 8px;
+  font-size: 22px;
+  color: #555;
+  border-color: #35b3f2;
+  cursor: pointer;
+  transition: color 0.3s;
+  user-select: none;
+}
+
+.star.active {
+  color: #35b3f2;
+}
+
+/* hover */
+.star:hover {
+  color: #35b3f2;
+}
