--- a/templates/wb.html
+++ b/templates/wb.html
@@ -6,7 +6,7 @@
     <title>세미콜론 단어장</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
     <link rel="shortcut icon" href="../favicon.png">
-    <link rel="stylesheet" href="../static/css/wb.css">
+    <link rel="stylesheet" href="./wb.css">
 </head>
 <body>
     <!-- sidebar -->
@@ -46,14 +46,13 @@
                 <div class="dayline4">
                     <div id="day29">29</div>
                     <div id="day30">30</div>
+                    <div id="starred">★</div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Main Screen -->
-    <div class="mainstream">
-
-    <template id="wordblock">
+    <div class="wordblock">
         <div class="wordcontainer">
             <header>
                 <div class="word">semicolon</div>
@@ -62,22 +61,27 @@
             <div class="examplecontainer">
 
             </div>
+
+            <div class="exampleblock">
+                <div class="meaning">운정고 코딩동아리
+                    <span class="star">☆</span>
+                </div>
+                <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
+                <div class="ksentence">세미콜론은 최고다.</div>
+                <div class="meaning">온점과 반점
+                    <span class="star active">★</span>
+                </div>
+                <div class="esentence"><span>Semicolon</span> is composed of the break and the end.</div>
+                <div class="ksentence">세미콜론은 쉼표와 마침표로 구성되어 있다.</div>
+            </div>
         </div>
-    </template>
-    <template id="exampleblock">
-        <div class="exs">
-            <div class="meaning">운정고 코딩동아리</div>
-            <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
-            <div class="ksentence">세미콜론은 최고다.</div>
-        </div>
-    </template>
-    <template id="unselected">
+    </div>
+    <div class="unselected">
         <div id="plzselect">
             DAY가 선택되지 않았습니다
         </div>
-    </template>
-
     </div>
     <script src="../static/javascript/wb.js"></script>
 </body>
+</html>
 </html>
