--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,15 @@
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
                 <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
-                <button class="Review">오답복습(미완)</button>
-                <button class="Favorites">즐겨찾기된 단어(미완)</button>
-                <button class="Statistics">통계(미완)</button>
+                <!-- <button class="Review">오답복습(미완)</button> -->
+                <!-- <button class="Favorites">즐겨찾기된 단어(미완)</button> -->
+                <!-- <button class="Statistics">통계(미완)</button> -->
                 <form action="{{ url_for('logout') }}">
                     <button class="Logout">로그아웃</button>
                 </form>
-                
+                <form action="{{ url_for('words') }}">
+                    <button> 단어장 바로가기 </button>
+                </form>
             </div>
    </div> 
 
