--- a/templates/wb.html
+++ b/templates/wb.html
@@ -49,6 +49,9 @@
                 </div>
             </div>
         </div>
+        <form action="{{ url_for('main_page') }}">
+            <button type="submit" style="background-color:white;">돌아가기</button>
+        </form>
     </div>
 </body>
 </html>
