--- a/templates/wb.html
+++ b/templates/wb.html
@@ -6,7 +6,7 @@
     <title>세미콜론 단어장</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
     <link rel="shortcut icon" href="../favicon.png">
-    <link rel="stylesheet" href="./wb.css">
+    <link rel="stylesheet" href="../static/css/wb.css">
 </head>
 <body>
     <!-- sidebar -->
@@ -49,42 +49,34 @@
                     <div id="starred">★</div>
                 </div>
             </div>
+            
+            <form action="{{ url_for('main_page') }}">
+                <button type="submit" style="background-color:white;">돌아가기</button>
+            </form>
         </div>
-        <form action="{{ url_for('main_page') }}">
-            <button type="submit" style="background-color:white;">돌아가기</button>
-        </form>
     </div>
     <!-- Main Screen -->
     <div class="wordblock">
         <div class="wordcontainer">
-            <header>
-                <div class="word">semicolon</div>
-                <div class="wordnum">1234</div>
-            </header>
-            <div class="examplecontainer">
+        <header>
+            <div class="word">TEMPLATE_WORD</div>
+            <div class="wordnum">0000</div>
+        </header>
 
-            </div>
-
-            <div class="exampleblock">
-                <div class="meaning">운정고 코딩동아리
-                    <span class="star">☆</span>
-                </div>
-                <div class="esentence"><span>Semicolon</span> is better than any other club in UJHS.</div>
-                <div class="ksentence">세미콜론은 최고다.</div>
-                <div class="meaning">온점과 반점
-                    <span class="star active">★</span>
-                </div>
-                <div class="esentence"><span>Semicolon</span> is composed of the break and the end.</div>
-                <div class="ksentence">세미콜론은 쉼표와 마침표로 구성되어 있다.</div>
-            </div>
+        <div class="exampleblock">
+            <div class="meaning">뜻 텍스트 <span class="star">☆</span></div>
+            <div class="esentence">Template _1_ sentence.</div>
+            <div class="ksentence">템플릿 해석.</div>
         </div>
     </div>
-    <div class="unselected">
-        <div id="plzselect">
-            DAY가 선택되지 않았습니다
-        </div>
-    </div>
-    <script src="../static/javascript/wb.js"></script>
+</div>
+
+<div class="unselected" style="display:none;">
+  <div id="plzselect">DAY가 선택되지 않았습니다</div>
+</div>
+
+<!-- body 끝 직전 -->
+<script src="../static/javascript/wb.js" defer></script>
 </body>
 </html>
 </html>
