--- a/templates/wb.html
+++ b/templates/wb.html
@@ -51,7 +51,7 @@
             </div>
             
             <form action="{{ url_for('main_page') }}">
-                <button type="submit" style="background-color:white;">돌아가기</button>
+                <button type="submit">돌아가기</button>
             </form>
         </div>
     </div>
@@ -78,5 +78,4 @@
 <!-- body 끝 직전 -->
 <script src="../static/javascript/wb.js" defer></script>
 </body>
-</html>
 </html>
