--- a/templates/wb.html
+++ b/templates/wb.html
@@ -51,7 +51,7 @@
             </div>
             
             <form action="{{ url_for('main_page') }}">
-                <button type="submit">돌아가기</button>
+                <button type="submit">예문학습으로 돌아가기</button>
             </form>
         </div>
     </div>
