--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>영어 수행 만점 가자</title>
+    <title>영어 수행 연습</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/responsive.css">
 </head>
@@ -18,15 +18,22 @@
                 <button class="close-btn" onclick="closeSidebar()"></button>
                 <h2>단<spon style="color: #66cc33;">어</spon>장 by <span style="color: #66cc33;">;</span></h2>
                 <hr style="width: auto; height: 2px; background-color: #555555; border: none">
-                <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
-                <!-- <button class="Review">오답복습(미완)</button> -->
-                <!-- <button class="Favorites">즐겨찾기된 단어(미완)</button> -->
-                <!-- <button class="Statistics">통계(미완)</button> -->
-                <form action="{{ url_for('logout') }}">
-                    <button class="Logout">로그아웃</button>
+                
+                <form action=>
+                    <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
                 </form>
+
+                <form action=>
+                    <button class="Review">오답복습</button>
+                </form>
+
+                
                 <form action="{{ url_for('words') }}">
                     <button> 단어장 바로가기 </button>
+                </form>
+                
+                <form action="{{ url_for('logout') }}">
+                    <button class="Logout">로그아웃</button>
                 </form>
             </div>
    </div> 
@@ -37,7 +44,7 @@
         <!-- form 써서 url로 예문 페이지에 day 정보 보내버릴거임-->
             <form id="goStart">
         <!-- 단어 선택 input (value 값을 기준으로 js파일 만들어줘요요)-->
-            <div class="wordoption">
+            <!-- <div class="wordoption">
                 <label><input class="itam" type="checkbox" name="day" value="d1">Day1</label>
                 <label><input class="itam" type="checkbox" name="day" value="d2">Day2</label>
                 <label><input class="itam" type="checkbox" name="day" value="d3">Day3</label>
@@ -54,14 +61,14 @@
                 <label><input class="itam" type="checkbox" name="day" value="d14">Day14</label>
                 <label><input class="itam" type="checkbox" name="day" value="d15">Day15</label>
                 <label><input class="itam" type="checkbox" name="day" value="d16">Day16</label>
-            </div>
+            </div> -->
 
-            <div class="mainbtn">
+            <!-- <div class="mainbtn">
                 <button type="button" id="selectAllBtn">모두 선택</button>
                 <button type="button" id="deselectAllBtn">모두 취소</button>
                 <button type="submit" id="startAllBtn">시작하기</button>
             </div>
-        </form>
+        </form> -->
     </div>
 
 <h5 style="color: #555555;">made by 정빈, 범서, 예강, 상혁, 승민, 종호, 하윤 / 오류문의 : 인스타 an0_9jb(오류난 화면을 찍어서 보내주세요)</h5>
