--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>검색 결과</title>
+  <title>결과</title>
   <link rel="stylesheet" href="../resultstyle.css">
   <link rel="stylesheet" href="../resultresponsive.css">
 </head>
